# omdb-service

./: .gitignore  Cargo.toml  LICENSE
config/: test
src/: api.rs  cache.rs  config.rs  main.rs
src/handlers/: mod.rs  omdb_handlers.rs
src/models/: health_models.rs
src/routes/: health.rs  mod.rs  omdb.rs
